--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 		<header class="header">
 			<div class="header__body">
-				<img src="assets/img/logoanti.svg" alt="stul">
+				<img src="assets/img/logoanti.png" alt="stul">
 			</div>
 		</header>
 
