--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 		<header class="header">
 			<div class="header__body">
 				<img src="assets/img/logoanti.png" alt="stul">
+				<h1 style="color: #fff">ОБНОВИЛ</h1>
 			</div>
 		</header>
 
