--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
 		<header class="header">
 			<div class="header__body">
-				<img src="assets/img/logoanti.png" alt="stul">
-				<h1 style="color: #fff">ОБНОВИЛ</h1>
+				<img src="assets/img/logoanti.png" alt="stul"><br>
+				<h1 style="color: #fff">ОБНОВИЛ ЕЩЁ РАЗ</h1>
 			</div>
 		</header>
 
